# kayak

./: Cargo.toml  README.md  create_project.sh
examples/: basics.rs
examples/flappy_bird/: Cargo.toml  run.sh
examples/flappy_bird/src/: bird.rs  game_state.rs  main.rs  pipes.rs  resources.rs
examples/flappy_bird/web/: build_wasm.sh  flappy_bird.wasm  index.html
src/: context.rs  lib.rs  master.rs  resources.rs  state.rs  update_status.rs  viewport.rs
src/extras/: bounding_box.rs  map.rs  mod.rs  transform.rs
