[package]
name = "flappy_bird"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kayak = { git = "https://github.com/eboatwright/kayak" }
# This project uses my modified version of Macroquad. Check out the original at https://github.com/not-fl3/macroquad
macroquad = { git = "https://github.com/eboatwright/macroquad" }